find mean squared error and mean absolute error

--- a/feedforward-propagation.ipynb
+++ b/feedforward-propagation.ipynb
@@ -2,12 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e60e08db",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
+    "def mse(p, y):\n",
+    "    return np.mean(np.square(p - y))\n",
+    "\n",
+    "def mae(p, y):\n",
+    "    return np.mean(abs(p-y))\n",
     "\n",
     "def feed_forward(inputs, outputs, weights):\n",
     "    # calculate hidden layers\n",
