implement categorical cross entropy

--- a/feedforward-propagation.ipynb
+++ b/feedforward-propagation.ipynb
@@ -18,6 +18,9 @@
     "def binary_cross_entropy(p, y):\n",
     "    return -np.mean(np.sum(y*np.log(p)+(1-y)*np.log(1-p)))\n",
     "\n",
+    "def categorical_cross_entropy(p, y):\n",
+    "    return -np.mean(np.sum(y*np.log(p)))\n",
+    "\n",
     "def feed_forward(inputs, outputs, weights):\n",
     "    # calculate hidden layers\n",
     "    pre_hidden = np.dot(inputs, weights[0]) + weights[1] # weight[0] (weight values) and weight[1] (bias terms)\n",
