calculate gradient descent with feedforward loss

--- a/gradient_descent.ipynb
+++ b/gradient_descent.ipynb
@@ -24,12 +24,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f0faf2a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from copy import deepcopy"
+    "from copy import deepcopy\n",
+    "\n",
+    "# neural network contains 4 parameters: 2 lists each for weight and bias parameters (connects input to hidden layer, hidden to output layer)\n",
+    "# performs gradient descent: increase weight and bias by a very small amount\n",
+    "def update_weights(inputs, outputs, weights, lr):\n",
+    "\n",
+    "    # deepcopy to not change original weights\n",
+    "    original_weights = deepcopy(weights)\n",
+    "    temp_weights = deepcopy(weights)\n",
+    "    updated_weights = deepcopy(weights)\n",
+    "\n",
+    "    # calculate loss value\n",
+    "    original_loss = feed_forward(inputs, outputs, original_weights)\n",
+    "    for i, layer in enumerate(original_weights): # loop through all layers of network\n",
+    "        for index, weight in np.ndenumerate(layer): # loop through each parameter within a given list\n",
+    "            temp_weights = deepcopy(weights) # reset to original set of weights since a different parameter is updated each iteration to calculate loss\n",
+    "            temp_weights[i][index] += 0.0001 # select its index weight present in ith layer and increase by small value\n",
+    "            _loss_plus = feed_forward(inputs, outputs, temp_weights) # compute new loss with the new set of weights\n",
+    "            grad = (_loss_plus - original_loss)/0.0001\n",
+    "            updated_weights[i][index] -= grad*lr\n",
+    "    \n",
+    "    return updated_weights, original_loss\n",
+    "\n"
    ]
   }
  ],
