fix typo with variable naming

--- a/feedforward-propagation.ipynb
+++ b/feedforward-propagation.ipynb
@@ -29,7 +29,7 @@
     "    pred_out = np.dot(hidden, weights[2]) + weights[3] # calc output layer values\n",
     "\n",
     "    # calc mean squared error value across dataset\n",
-    "    mean_squared_error = np.mean(np.square(ored_out - outputs))\n",
+    "    mean_squared_error = np.mean(np.square(pred_out - outputs))\n",
     "\n",
     "    return mean_squared_error"
    ]
