fetch modified weight at end of each epoch

--- a/backpropagation.ipynb
+++ b/backpropagation.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "642067cc",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
     "# update weights over 100 epochs and fetch the loss value and the updated weight values\n",
     "losses = []\n",
     "for epoch in range(100):\n",
-    "    W, loss = update_weights(x, y, W, 0.01)\n",
+    "    W, loss = update_weights(x, y, W, 0.01) # fetch modified weight at end of each epoch\n",
     "    losses.append(loss)"
    ]
   },
